# CORE_TUTORIALS

./: .editorconfig  .flake8  .pre-commit-config.yaml  Makefile  README.rst  pyproject.toml  temp.py
core/core/utils/: collections.py  misc.py  settings.py
core/project/settings/: __init__.py  base.py  custom.py  docker.py  envvars.py  logging.py
core/project/settings/templates/: settings.dev.py
